fix: remove empty space at the bottom on mobile view

--- a/css/reset.css
+++ b/css/reset.css
@@ -4,6 +4,15 @@
 }
 
 /* Reset */
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 p {
   font-size: 16px;
   line-height: 1.5;
